Fix for bug 324131: Persisting tooltip on desktop after minimizing r/sr=roc